# airiti

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
