[package]
name = "airiti"
version = "0.1.0"
authors = ["Jonir Rings <peterpuyi@live.cn>"]
description = "decode airiti image"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = [ "suggestions", "color" ] }
env_logger = "0.8.3"
log = "0.4.14"
shellexpand = "2.1.0"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
