[package]
name = "airiti"
version = "0.2.0"
authors = ["Jonir Rings <peterpuyi@live.cn>"]
description = "decode airiti image"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = [ "suggestions", "color" ] }
shellexpand = "2.1.0"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
